--- a/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension">
-  <Product Id="EA6EEF80-117C-417A-906A-E4FA69BF5B7E" Name="WSUIOutlookPlugin" Language="1033" Version="1.0.3" Manufacturer="FruitFactory" UpgradeCode="6169fa5d-89fa-44d3-9801-cefe8fc8755e" Codepage="1252">
+  <Product Id="B8766561-20B2-4504-9FCC-2C00FF1B8941" Name="WSUIOutlookPlugin" Language="1033" Version="1.0.0" Manufacturer="FruitFactory" UpgradeCode="6169fa5d-89fa-44d3-9801-cefe8fc8755e" Codepage="1252">
     <Package InstallerVersion="200" Compressed="yes" Description="WSUIOutlookPlugin" Manufacturer="FruitFactory" Languages="1033" SummaryCodepage="1252" InstallScope="perUser" InstallPrivileges="limited" />
     <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
     <Media Id="1" Cabinet="WSUI.OutlookPlugin.cab" EmbedCab="yes" />
@@ -131,6 +131,10 @@
         <File Id="_WSUI_Module_dll" Name="WSUI.Module.dll" Source="$(var.WSUI.OutlookPlugin.TargetDir)" />
         <File Id="_Html_Agility_Pack_dll" Name="HtmlAgilityPack.dll" Source="$(var.WSUI.OutlookPlugin.TargetDir)" />
         <File Id="_WSUI_Core_dll" Name="WSUI.Core.dll" Source="$(var.WSUI.OutlookPlugin.TargetDir)" />
+        <File Id="_Turbo_Activate_dat" Name="TurboActivate.dat" Source="$(var.WSUI.OutlookPlugin.TargetDir)" />
+        <File Id="_Turbo_Activate_dll" Name="TurboActivate.dll" Source="$(var.WSUI.OutlookPlugin.TargetDir)" />
+        <File Id="_Turbo_Activate_exe" Name="TurboActivate.exe" Source="$(var.WSUI.OutlookPlugin.TargetDir)" />
+        <File Id="_Turbo_Activate64_dll" Name="TurboActivate64.dll" Source="$(var.WSUI.OutlookPlugin.TargetDir)" />
       </Component>
     </ComponentGroup>
   </Fragment>
