--- a/WSUI.Control/WSMainControl.xaml
+++ b/WSUI.Control/WSMainControl.xaml
@@ -87,7 +87,7 @@
             </Button.Style>
         </Button>
 
-        <Grid Grid.Row="1" Visibility="{Binding ActivateStatus,Converter={StaticResource GridVisibility},UpdateSourceTrigger=PropertyChanged}"><!---->
+        <Grid Grid.Row="1" ><!--Visibility="{Binding ActivateStatus,Converter={StaticResource GridVisibility},UpdateSourceTrigger=PropertyChanged}"-->
             <Grid.Resources>
                 <ResourceDictionary>
                     <ResourceDictionary.MergedDictionaries>
@@ -101,18 +101,19 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             
-            <TextBlock x:Name="ActivationStatus" Grid.Column="0" Text="{Binding TextStatus,UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" Foreground="Red"
+            <TextBlock x:Name="ActivationStatus" Grid.Column="0" Text="{Binding TextStatus,UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="1" Foreground="Red"
                        FontSize="14" FontWeight="Bold"
+                       
                        HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
             
-            <Button x:Name="ButtonActivate" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Command="{Binding ActivateCommand}"
+            <Button x:Name="ButtonActivate" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Command="{Binding ActivateCommand}"
                     Visibility="{Binding ActivateStatus,Converter={StaticResource ButtonVisibility},ConverterParameter={x:Static enums:ActivationButtons.Activate},UpdateSourceTrigger=PropertyChanged}"
                     >Activate</Button>
-            <Button x:Name="ButtonTryCheckAgain" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Command="{Binding TryAgainCommand}"
+            <Button x:Name="ButtonTryCheckAgain" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Command="{Binding TryAgainCommand}"
                     Visibility="{Binding ActivateStatus,Converter={StaticResource ButtonVisibility},ConverterParameter={x:Static enums:ActivationButtons.TryAgain},UpdateSourceTrigger=PropertyChanged}"
                     >Try Check Again</Button>
             <Button x:Name="ButtonDeactivate" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Command="{Binding DeactivateCommand}"
-                    Visibility="Collapsed"
+                    Visibility="Visible"
                     >Deactivate</Button>
 
         </Grid>
