--- a/WSUI.Control/WSMainControl.xaml
+++ b/WSUI.Control/WSMainControl.xaml
@@ -1,12 +1,8 @@
 ﻿<UserControl x:Class="WSUI.Control.WSMainControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:cal="http://www.codeplex.com/CompositeWPF"
              xmlns:converters="clr-namespace:WSUI.Infrastructure.Converters;assembly=WSUI.Infrastructure"
-             xmlns:enums="clr-namespace:WSUI.Core.Enums;assembly=WSUI.Core"
              Height="650" Width="950" MinHeight="450" MinWidth="725" 
              Background="White"
              >
@@ -24,6 +20,10 @@
             
             <converters:ActivationStatusToGridVisibilityConverter x:Key="GridVisibility"></converters:ActivationStatusToGridVisibilityConverter>
             <converters:ActivationStatusToButtonVisibilityConverter x:Key="ButtonVisibility"></converters:ActivationStatusToButtonVisibilityConverter>
+            
+            <SolidColorBrush x:Key="RedColorBrush" Color="Red"></SolidColorBrush>
+            <SolidColorBrush x:Key="DarkRedColorBrush" Color="DarkRed"></SolidColorBrush>
+            <SolidColorBrush x:Key="WhiteColorBrush" Color="White"></SolidColorBrush>
             
         </ResourceDictionary>
     </UserControl.Resources>
@@ -69,18 +69,39 @@
             </Grid>
         </Border>
 
-        <Button x:Name="CloseButton" Grid.Row="0"  Width="20"  HorizontalAlignment="Right" VerticalAlignment="Top"  FontFamily="Marlett" Content="r"  IsTabStop="False" 
-                        Click="CloseButton_OnClick"
-                        >
+        <Button x:Name="CloseButton" 
+                Grid.Row="0"  HorizontalAlignment="Right" VerticalAlignment="Top"
+                BorderThickness="1, 1, 1, 1" 
+                Focusable="True" Height="30" HorizontalContentAlignment="Center" IsTabStop="False" 
+                MaxHeight="34" Padding="1, 1, 1, 1" RenderSize="34, 30" ToolTip="Close" VerticalContentAlignment="Center" Width="34" 
+                Click="CloseButton_OnClick" >
+            <Grid Background="Transparent" RenderSize="34, 30">
+                <Path Fill="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" RenderSize="10, 8" SnapsToDevicePixels="True" x:Name="PathCross"
+                      Stretch="Uniform" Width="16" Height="16" Margin="0,0,0,0" RenderTransformOrigin="0.5,0.5">
+                    <Path.Data>
+                        F1M54.0573,47.8776L38.1771,31.9974 54.0547,16.1198C55.7604,14.4141 55.7604,11.6511 54.0573,9.94531 52.3516,8.23962 49.5859,8.23962 47.8802,9.94531L32.0026,25.8229 16.1224,9.94531C14.4167,8.23962 11.6511,8.23962 9.94794,9.94531 8.24219,11.6511 8.24219,14.4141 9.94794,16.1198L25.8255,32 9.94794,47.8776C8.24219,49.5834 8.24219,52.3477 9.94794,54.0534 11.6511,55.7572 14.4167,55.7585 16.1224,54.0534L32.0026,38.1745 47.8802,54.0534C49.5859,55.7585 52.3516,55.7572 54.0573,54.0534 55.7604,52.3477 55.763,49.5834 54.0573,47.8776z
+                    </Path.Data>
+                    <Path.RenderTransform>
+                        <TransformGroup>
+                            <TransformGroup.Children>
+                                <RotateTransform Angle="271" />
+                                <ScaleTransform ScaleX="1" ScaleY="1" />
+                            </TransformGroup.Children>
+                        </TransformGroup>
+                    </Path.RenderTransform>
+                </Path>
+            </Grid>
             <Button.Style>
                 <Style TargetType="Button" BasedOn="{StaticResource ChromelessButtonStyle}">
+                    <Setter Property="Foreground" Value="#FFCCCCCC"></Setter>
                     <Style.Triggers>
                         <Trigger Property="Button.IsMouseOver" Value="True">
-                            <Setter Property="Button.Background" Value="{DynamicResource GrayBrush5}" />
+                            <Setter Property="Button.Background" Value="{StaticResource RedColorBrush}" />
+                            <Setter Property="Button.Foreground" Value="{StaticResource WhiteColorBrush}" />
                         </Trigger>
                         <Trigger Property="Button.IsPressed" Value="True">
-                            <Setter Property="Button.Background" Value="{DynamicResource BlackBrush}" />
-                            <Setter Property="Button.Foreground" Value="{DynamicResource WhiteBrush}" />
+                            <Setter Property="Button.Background" Value="{StaticResource DarkRedColorBrush}" />
+                            <Setter Property="Button.Foreground" Value="{StaticResource WhiteColorBrush}" />
                         </Trigger>
                     </Style.Triggers>
                 </Style>
