--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -6,11 +6,16 @@
              xmlns:service="clr-namespace:WSUI.Module.Service"
              xmlns:ctrl="clr-namespace:WSUI.Infrastructure.Controls;assembly=WSUI.Infrastructure"                  
                     xmlns:converters="clr-namespace:WSUI.Infrastructure.Converters;assembly=WSUI.Infrastructure"
-                    xmlns:listBox="clr-namespace:WSUI.Infrastructure.Controls.ListBox;assembly=WSUI.Infrastructure">
+                    xmlns:listBox="clr-namespace:WSUI.Infrastructure.Controls.ListBox;assembly=WSUI.Infrastructure"
+                    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                    >
+                    
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-        <!--<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatButton.xaml" />-->
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <service:DateToStringConverter x:Key="dateConverter" />
@@ -206,10 +211,13 @@
             </Grid.ToolTip> 
             <Expander Margin="0" Grid.Column="0" Style="{StaticResource EmailExpanderStyle}" ExpandDirection="Down">
                 <Grid>
-                    <ListBox ItemsSource="{Binding Items}"
+                    <ListBox IsSynchronizedWithCurrentItem="True" ItemsSource="{Binding Items}"
                              SelectedItem="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBox}},Path=SelectedItem,Mode=OneWayToSource}"
-                             ItemTemplate="{StaticResource EmailItemTemplate}" 
-                             >
+                             ItemTemplate="{StaticResource EmailItemTemplate}" >
+                             
+                        <!--<i:Interaction.Behaviors>
+                            <behaviors:ChildListBoxBehavior />
+                        </i:Interaction.Behaviors>-->
                     </ListBox>
                 </Grid>
             </Expander>    
