--- a/WSUI.Module/View/AllFilesDataView.xaml
+++ b/WSUI.Module/View/AllFilesDataView.xaml
@@ -6,6 +6,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:service="clr-namespace:WSUI.Module.Service"
+             xmlns:listBox="clr-namespace:WSUI.Infrastructure.Controls.ListBox;assembly=WSUI.Infrastructure"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:attch="clr-namespace:WSUI.Infrastructure.Helpers.AttachedProperty;assembly=WSUI.Infrastructure"
              x:Name="this"
              >
     <UserControl.Resources>
@@ -30,15 +33,23 @@
     </UserControl.Resources>
     <DockPanel LastChildFill="True" >
 
-        <ListBox x:Name="listBox" ItemsSource="{Binding Path=DataSource,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
-                 ItemTemplateSelector="{StaticResource templateSelector}"
+        <ListBox x:Name="listBox" 
+                BorderBrush="Transparent"
+                Background="Transparent"                             
+                 ItemsSource="{Binding Path=DataSource,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                 attch:ListBoxSelectedObjectAttachedProperty.SelectedObject="{Binding Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  SelectedItem="{Binding Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                 attch:ListBoxShouldSetSelectAttachedProperty.ShouldSetSelect="True"
+                 ItemTemplateSelector="{StaticResource templateSelector}"
                  ContextMenu="{StaticResource ResourceKey=contextMenu}"
                  IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}"
                  ScrollViewer.ScrollChanged="ListBox_ScrollChanged_1"
                  service:DoubleClickBehabior.DoubleClickHandler="{Binding DoubleClickCommand}"
+                 IsSynchronizedWithCurrentItem="True"
                  >
-            
+            <!--<i:Interaction.Behaviors>
+                <behaviors:MainListBoxBehavior></behaviors:MainListBoxBehavior>
+            </i:Interaction.Behaviors>-->
         </ListBox>
     </DockPanel>
 </UserControl>
